--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Tasked with using the Punk API to fetch beers based on user input parameters. Built with React, a good
+    lesson in asynchronous behaviour.</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
